--- a/frontend/sample/src/components/LoginForm.css
+++ b/frontend/sample/src/components/LoginForm.css
@@ -1,3 +1,6 @@
+/* *{
+      background-color: #ffffffe6;
+} */
 .login-container {
   height: 100vh;
   display: flex;
@@ -28,8 +31,8 @@
 }
 
 .login-icon {
-  color: white;
-  font-size: 32px;
+  color: white
+  font-size 32px;
 }
 
 .team-name {
